# ParaRC

./: .gitignore  CMakeLists.txt  README.md
conf/: sysSetting.xml
openec-pararc-patch/hdfs3-integration/: install.sh
openec-pararc-patch/hdfs3-integration/conf/: core-site.xml  hadoop-env.sh
openec-pararc-patch/hdfs3-integration/src/: BlockManager.java  BlockPlacementPolicy.java  BlockPlacementPolicyDefault.java  BlockPlacementPolicyOEC.java  CommandWithDestination.java  FSDirWriteFileOp.java  FSNamesystem.java  LowRedundancyBlocks.java  NameNodeRpcServer.java  NetworkTopology.java  StripedBlockReconstructor.java  hdfs.c
openec-pararc-patch/openec-patch/: OECClient.cc
openec-pararc-patch/openec-patch/common/: Config.cc  OECOutputStream.cc  OECWorker.cc  OECWorker.hh
openec-pararc-patch/openec-patch/ec/: BUTTERFLY.cc  BUTTERFLY64.hh  (+3 more)
script/: createconf.py  dumpmeta.py  gendata.py  prepare.sh  start.py  stop.py  sysSetting.xml
script_kycheng/: cacheclear.sh  check_blocks.sh  check_bw.sh  check_cluster_logs.sh  check_cluster_status.sh  check_configs.sh  check_nodes_alive.sh  check_redis.sh  createconf.py  distribute.sh  gen_meta_from_hdfs.py  gen_meta_from_hdfs.sh  set_config.sh  set_env.sh  start.py  stop.py
src/: CMakeLists.txt  ClayTest.cc  CodeTest.cc  DistAgent.cc  DistClient.cc  DistCoordinator.cc  GenData.cc  GenMLP.cc  LocalSearch.cc  RepairTest.cc  SimpleSearch.cc  TradeoffAnalysis.cc  TradeoffCurve.cc
src/common/: CMakeLists.txt  Config.cc  Config.hh  Coordinator.cc  Coordinator.hh  DataPacket.cc  DataPacket.hh  StripeMeta.cc  StripeMeta.hh  StripeStore.cc  StripeStore.hh  TradeoffPoints.cc  TradeoffPoints.hh  Worker.cc  Worker.hh
src/ec/: BUTTERFLY.cc  BUTTERFLY.hh  BUTTERFLY64.cc  BUTTERFLY64.hh  CMakeLists.txt  Clay.cc  Clay.hh  Computation.cc  Computation.hh  ECBase.cc  ECBase.hh  ECCluster.cc  ECCluster.hh  ECDAG.cc  ECDAG.hh  ECNode.cc  ECNode.hh  ECTask.cc  ECTask.hh  ECUnit.cc  ECUnit.hh  HHXORPlus.cc  HHXORPlus.hh  IA.cc  IA.hh  MISER.cc  MISER.hh  RDPRDOR.cc  RDPRDOR.hh  RSCONV.cc  RSCONV.hh  RSPIPE.cc  RSPIPE.hh  SimpleGraph.cc  SimpleGraph.hh
src/inc/: include.hh
src/protocol/: AGCommand.cc  AGCommand.hh  CacheCommand.cc  CacheCommand.hh  ComputeCommand.cc  ComputeCommand.hh  CoorCommand.cc  CoorCommand.hh  FetchCommand.cc  FetchCommand.hh
src/util/: DistUtil.cc  DistUtil.hh  LoadVector.cc  LoadVector.hh  RedisUtil.cc  RedisUtil.hh
stripeStore/: Clay-0.xml
tradeoffPoint/: BUTTERFLY_10_8_128.xml  BUTTERFLY_12_10_512.xml  BUTTERFLY_6_4_8.xml  BUTTERFLY_8_6_32.xml  Clay_12_8_64.xml  Clay_14_10_256.xml  Clay_16_12_256.xml  Clay_6_4_8.xml  Clay_9_6_27.xml  HHXORPlus_14_10_2.xml  RDP_12_10_10.xml  RSPIPE_12_8_1.xml  RSPIPE_14_10_1.xml  RSPIPE_14_10_256.xml  RSPIPE_16_12_1.xml  RSPIPE_9_6_1.xml
tradeoffPoint/tradeoffPointAliyun/: Clay_14_10_256.xml  RSCONV_14_10_1.xml  RSPIPE_14_10_1.xml
(+12 files in other folders)
